k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kotlin-education-landscape
  labels:
    app: kotlin-education-landscape
spec:
  type: ClusterIP
  selector:
    app: kotlin-education-landscape
  ports:
    - name: http
      port: 80
      targetPort: http
